--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "TDD project | Odin",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "test": "jest",
     "test:watch": "jest --watch",
     "build": "webpack",
@@ -18,7 +20,7 @@
   "bugs": {
     "url": "https://github.com/jpablico/Battleship/issues"
   },
-  "homepage": "https://github.com/jpablico/Battleship#readme",
+  "homepage": "https://jpablico.github.io/Battleship",
   "devDependencies": {
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
@@ -28,6 +30,7 @@
     "babel-jest": "^29.7.0",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
+    "gh-pages": "^6.3.0",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
